--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div class="showcase-box">
                 <h1>Welcome {{ current_user.username}}</h1>
                 <p>Hey There! You are Welcome to the Portal..</p>
-                <p>You can create a blog of your own and can add articles and get money for them instantly.</p>
+                <p>You can create a blog of your own and can add articles and show off your adventurous trips and skills.</p>
                 <br>
                 <a href="#blog-showcase" class="button white hollow">Read More</a>
             </div>
