--- a/app/templates/includes/_newsletter.html
+++ b/app/templates/includes/_newsletter.html
@@ -1,4 +1,5 @@
-<section id="newsletter-container" class="container">
+<section id="newsletter-container">
+   <div class="container">
     <h1>Subscribe to get Latest news about this blog!</h1>
     <div class="subscribe-form" style="margin-top: 1.5em;">
     <form action="{{ url_for('add_subscriber') }}" method="post">
@@ -13,5 +14,5 @@
         <p class="help-text">By clicking subscribe, you agree to our Privacy and Service Terms.</p>
     </form>
     </div>
-
+    </div>
 </section>
