--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,55 +2,41 @@
 
 {% block content %}
 <!-- content -->
+<div class="container">
+<section id="home-hero1">
 
-<section id="hero">
-        <video autoplay muted loop id="intro">
-                <source src="{{ url_for('static', filename='assets/img/intro.mp4') }}" type="video/mp4">
-              </video>
-    <div class="row grid-x">
-        <div class="columns large-5 medium-5 large-offset-1 medium-offset-1">
-            <div class="showcase-box">
-                <h1>Welcome {{ current_user.username}}</h1>
-                <p>Hey There! You are Welcome to the Portal..</p>
-                <p>You can create a blog of your own and can add articles and show off your adventurous trips and skills.</p>
-                <br>
-                <a href="#blog-showcase" class="button white hollow">Read More</a>
-            </div>
+    <div class="grid-x grid-padding-x">
+        <picture>
+           <img src="{{ url_for('static', filename='assets/img/hero1.jpeg')}}">
+            </picture>
+        <div class="box1 cell large-5 small-12">
+            <h1>Welcome {{ current_user.username}}</h1>
+            <p>Hey There! You are Welcome to the Portal..</p>
+            <p>You can read a tons of articles and also write one of your own also and show off about your adventures or passion.</p>
+            <br>
+            <a href="#home-hero2" class="button hollow">Read More</a>
+           </div>
+    </div>
+</section>
+</div>
+
+<div class="container">
+<section id="home-hero2">
+
+    <div class="grid-x grid-padding-x">
+        <picture>
+           <img src="{{ url_for('static', filename='assets/img/hero2.png')}}">
+            </picture>
+        <div class="box1 cell large-5 small-12">
+           <h1>Read the Latest Blog Feed</h1>
+            <p>You can read finely written series of articles or even you can start writing one from dashboard.</p>
+            <br>
+            <a href="{{ url_for('blog')}}" class="button hollow">See Blog</a>
         </div>
     </div>
 </section>
-<section class="container">
-        <h1><small>Featured Posts</small></h1><hr>
-        {% for post in featured[:3] %}
-            <div id="post-tab">
-                {% if post.banner %}
-                    <img src="{{ post.banner }}" alt="" srcset="">
-                {% endif %}
-                <h3><a href="{{ url_for('show_post', postID=post.id)}}">{{ post.heading }}</a></h3><br>
-                <div class="post-meta row">
-                    <p><i class="fi-like"></i> Likes : {{ post.likes }}
-                    <br><i class="fi-torso"></i> Written By: {{ post.author }} <br>
-                    <i class="fi-clock"></i> Last Updated: {{ moment(post.timestamp).format('LLL') }}</p>
-                </div>
-                <a href="{{ url_for('show_post', postID=post.id)}}" class="button secondary">Read Article</a>
-                <br><br>
-            </div>
-        {% endfor %}
-</section>
+</div>
 
-
-<section id="blog-showcase">
-    <div class="row grid-x">
-        <div class="columns large-5 medium-5 large-offset-1 medium-offset-1">
-            <div class="showcase-box">
-                <h1>Read on the latest Blog Posts !</h1>
-                <p>You can read the latest articles written by peoples all over the world. <br> And You can one too..</p>
-                <br>
-                <a href="{{ url_for('blog')}}" class="button hollow default">Go to Blog</a>
-            </div>
-        </div>
-    </div>
-</section>
 
 
 {% endblock %}
