--- a/app/templates/site/post.html
+++ b/app/templates/site/post.html
@@ -1,41 +1,21 @@
 {% extends "base.html" %}
 {% block head %}
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1318488055026422",
-    enable_page_level_ads: true
-  });
-</script>
+    <!-- ads script -->
 {% endblock %}
 {% block content %}
-<div class="container grid-x grid-margin-x">
-<section id="post" class="row cell large-8">
-    <div class="row">
+<div class="container">
+<div class="grid-x">
+<section id="post" class="cell large-8">
     <div class="post-category">
         <p class="lead"><a href="{{ url_for('post_category', categoryID=post.categoryID(post.category(post.id)))}}">{{ post.category(post.id) }}</a></p>
     </div>
     <div class="heading">
         <h1 >{{ post.heading | safe }}</h1>
+        <p><a href="{{ url_for('user', username=post.author)}}">{{ post.author }}</a> | {{ moment(post.timestamp).format('LL') }}</p>
         <br>
     </div>
 
-     <div class="post-meta">
-            <div class="row nomargin" id='like'>
-                
-                <form action="{{ url_for('like_post')}}" method="POST">
-                <input type="hidden" name="user" value="{{ current_user }}">
-                <input type="hidden" name="next" value="{{ request.url }}">
-                <input type="hidden" name="postID" value="{{ post.id }}">
-                <i class="fi-like"></i> Likes : {{ post.likes }}
-                <input type="submit" class="small button hollow alert" name="like" id="like" value="Like" style="color: var(--brand-pink)!important">   
-                </form>  
-            </div>
-            <p ><i class="fi-torso"></i> Author : <a href="{{ url_for('user', username=post.author)}}">{{ post.author }}</a><br>
-            <i class="fi-clock"></i> Last Updated : {{ moment(post.timestamp).format('LLL') }}</p>
-        </div>
-    <br><br>
+    
     <div id="breadcrumbs">
         <nav aria-label="You are here:" role="navigation">
           <ul class="breadcrumbs">
@@ -49,38 +29,49 @@
           </ul>
         </nav>
     </div>
-    <div id="tags">
-        <p class="post-meta">Tags : {% for tag in post.tags %}
-                       <a href="{{ url_for('post_tag', tagID=tag.id)}}">{{ tag.tag_name }}</a>,
-                    {% endfor %}
-        </p>
-    </div>
 
         <hr>
-    <br>
-    <article>
+        <div class="post-meta">
+                <div class="row nomargin" id='like'>
+                    
+                    <form action="{{ url_for('like_post')}}" method="POST" class="input-group">
+                        <input type="hidden" name="user" value="{{ current_user }}">
+                        <input type="hidden" name="next" value="{{ request.url }}">
+                        <input type="hidden" name="postID" value="{{ post.id }}">
+                        <button class="input-group-field button blue" type="info"><i class="fi-like"></i> {{ post.likes }} Likes</button>
+                        <input type="submit" class="input-group-button button hollow" name="like" id="like" value="Like this post">   
+                    </form>  
+                </div>
+                
+            </div>
 
+    <article>
+        <div id="tags">
+                <div class="row">Posted Under : {% for tag in post.tags %} <li><a href="{{ url_for('post_tag', tagID=tag.id)}}">{{ tag.tag_name }}</a></li>{% endfor %}
+                </div>
+            </div>
+        <br>
+        <img src="{{ post.thumbnail }}" class="post-thumb"><br>
         {{ post.body|safe }}
 
     </article>
-    </div>
 
 </section>
 
-<section id="related-posts" class="row cell large-4">
-        <br><br>
-        <p class="lead">Related Posts</p><hr><br>
+<section id="related-posts" class="cell large-4">
+        <p class="lead">Related Stories</p>
         {% for post in post.related(post.id) %}
             {% include "includes/_post_media_object.html"%}
         {% endfor %}
 </section>
 
 </div>
-<div class='container-trans ad'><a href="http://www.dmca.com/ProtectionPro.aspx?affId=yourtoken" style="color:#010101;text-decoration:none;"><img src="http://www.dmca.com/App_Themes/DMCA/images/DMCA-intro-protection-proBadgeMini-2.png" alt="Website Protection Pro" style="float:left;padding:5px 15px 0 0;" /> </a> <div style="background-color:#f1f1f1; padding:10px 5px;margin-top:10px;"> <a href="http://www.dmca.com/ProtectionPro.aspx?affId=yourtoken" style="color:#010101;text-decoration:none;"> <strong>Website Protection Pro&trade;</strong><br /> Combat copyright infringement with the ultimate tool-set from DMCA.com | <span style="text-decoration:underline;font-weight:bold;">Get Started Now for Just $10 / month</span>! </a> </div>
+<div class='ad'><a href="http://www.dmca.com/ProtectionPro.aspx?affId=yourtoken" style="color:#010101;text-decoration:none;"><img src="http://www.dmca.com/App_Themes/DMCA/images/DMCA-intro-protection-proBadgeMini-2.png" alt="Website Protection Pro" style="float:left;padding:5px 15px 0 0;" /> </a> <div style="background-color:#f1f1f1; padding:10px 5px;margin-top:10px;"> <a href="http://www.dmca.com/ProtectionPro.aspx?affId=yourtoken" style="color:#010101;text-decoration:none;"> <strong>Website Protection Pro&trade;</strong><br /> Combat copyright infringement with the ultimate tool-set from DMCA.com | <span style="text-decoration:underline;font-weight:bold;">Get Started Now for Just $10 / month</span>! </a> </div>
 </div>
-<section id="post-categories" class="container">
-    <h1>Post Categories</h1><hr><br><br>
-    <ul class="categories-list container">
+<hr>
+<section id="post-catalog">
+    <p class="lead">Categories</p>
+    <ul class="categories-list no-bullet">
     {% for category in post_categories %}
         <li class="category">
             <a href="{{ url_for('post_category' , categoryID=category.id) }}">{{ category.category_name }}</a>
@@ -89,5 +80,6 @@
     </ul>
 </section>
 
-
+</div>
+<hr>
 {% endblock %}
