--- a/app/templates/site/post/post_tag.html
+++ b/app/templates/site/post/post_tag.html
@@ -1,12 +1,12 @@
 {% extends 'base.html'%}
 {% block content %}
-<section id="post-category" class="container">
+<section id="post-category" class="container margin-y jumbo">
     <p class="lead">Posts in Tag {{ tag.tag_name }}</p><hr><br><br>
-    <ul class="posts-list row">
-    {% for post in posts %}
-        {% include 'includes/_post_media_object.html'%}
-    {% endfor %}
-    </ul>
+    <ul class="posts-list no-bullet grid-x grid-padding-x large-up-2 small-up-1">
+            {% for post in posts %}
+                {% include 'includes/_post_card.html'%}
+            {% endfor %}
+            </ul>
 </section>
 
 {% endblock %}
