--- a/app/templates/site/register.html
+++ b/app/templates/site/register.html
@@ -11,7 +11,12 @@
                 {% for error in form.username.errors %}
                 <span class="error-msg">{{ error }}</span>
                 {% endfor %}
-            
+
+                {{ form.fullname.label(class="label") }}
+                {{ form.fullname(size=32) }}
+                {% for error in form.fullname.errors %}
+                <span class="error-msg">{{ error }}</span>
+                {% endfor %}
             
                 {{ form.email.label(class='label') }}
                 {{ form.email(size=32) }}
@@ -21,7 +26,7 @@
             
             
                 {{ form.password.label(class='label') }}
-                {{ form.password(size=32) }}
+                {{ form.password() }}
                 {% for error in form.password.errors %}
                 <span class="error-msg" size="32">{{ error }}</span>
                 {% endfor %}
@@ -33,7 +38,7 @@
                 <span class="error-msg" size="32">{{ error }}</span>
                 {% endfor %}
             
-            {{ form.submit(class="button success", style="margin-left:0;") }}
+            {{ form.submit(class="button expanded") }}
 
         </form>
     </section>
