--- a/app/templates/user/add_article.html
+++ b/app/templates/user/add_article.html
@@ -24,6 +24,10 @@
                 </span>
             {% endfor %}
             <br>
+            <label for="thumbnail" class="label">Post Thumbnail</label>
+            <input name="thumbnail" id="thumbnail" type="text">
+            <p class="help-text">Use a post thumbnail to make your post look beautiful and attracting. You can search on internet and copy its url or you can upload a file <a href="{{ url_for('uploader')}}" target="_blank">here.</a></p>
+            <br>
             <label class="label" for="post-category-selector">Post Category</label>
             <select id="post-category-selector" name="post-category-selector" required> 
                 {% for category in postcategories %}
@@ -57,3 +61,5 @@
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
 <script>tinymce.init({ selector:'#editor' });</script>
 {% endblock %}
+
+
