--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -169,7 +169,9 @@
         {% if newsletter_form %}
             {% include "includes/_newsletter.html" %}
         {% endif %}
-
+        {% if comments %}
+            {% include "includes/_comments.html" %}
+        {% endif %}
         
 
         <footer id="footer">
