--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -170,7 +170,7 @@
             {% include "includes/_newsletter.html" %}
         {% endif %}
         {% if comments %}
-            {% include "includes/_comments.html" %}
+            {% include "includes/_comment.html" %}
         {% endif %}
         
 
